--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,13 @@
-body
+body {
   font-size: 14px;
 }
-
 nav {
-  background color: yellow;
+  background-color: yellow;
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
-
+}
 
 section {
   margin: 0 auto;
@@ -16,21 +15,41 @@ section {
 }
 
 h1 {
-  font-family sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
 }
 
-.example, h3 {
+.example h3 {
   padding-top: 30px;
-  text-align center
-}
-
-h3 {
+  text-align: center;
   font-size: 1.3em;
 }
 
 .element {
+  /* all the element has following style */
   background-color: green;
   height: 100px;
-  margin 10px 0;
+  margin: 10px;
   width: 100%;
+}
+.element1 {
+  /* display lavender color as a background for element1*/
+  background-color: #aa80ff;
+  height: 100px;
+  margin: 10px;
+  width: 100%;
+}
+.element2 {
+  /* display pastel pink as a background for element2 */
+  background-color: #ff80bf;
+  height: 100px;
+  margin: 10px;
+  width: 100%;
+}
+.element3 {
+  /* display mint green as a background for element3 */
+  background-color: #00e6ac;
+  height: 100px;
+  margin: 10px;
+  width: 100%;
+}
